2010-04-07  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix a bug on updating timeline history.
	(twittering-http-get-default-sentinel): call
	`twittering-add-timeline-history' with correct timeline spec
	string.
	(twittering-add-timeline-history): receive timeline spec string
	instead of timeline spec.

	* twittering-mode.el (twittering-mode-setup): omit redundant call
	of `run-hook'.

	* twittering-mode.el (twittering-direct-message): fix a lack of
	separator. Thanks to Takashi Masuda.

2010-04-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-new-tweets-spec): new variable
	for timeline spec on running `twittering-new-tweets-hook'.

	* twittering-mode.el: Add an experimental notifier for unread
	statuses on mode-line. You can enable it by invoking
	`twittering-enable-unread-status-notifier'. To disable it, invoke
	`twittering-disable-unread-status-notifier'.
	(twittering-unread-status-info): new variable.
	(twittering-reset-unread-status-info-if-necessary): new function.
	(twittering-set-number-of-unread): new function.
	(twittering-make-unread-status-notifier-string): new function.
	(twittering-update-unread-status-info): new function.
	(twittering-enable-unread-status-notifier): new function.
	(twittering-disable-unread-status-notifier): new function.

	* twittering-mode.el: Support fixed fill-column for the format
	specifier "%FILL{...}". Thanks to William Xu.
	(twittering-fill-column): new variable.

2010-04-04  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Improve compatibility with global-font-lock mode.
	(twittering-mode-init-global): use `bold' instead of
	`font-lock-string-face' if it has not been bound yet.
	`twittering-mode' does not require loading `font-lock'.
	(twittering-mode-setup): prevent `global-font-lock-mode' enabling
	`font-lock-mode' by using buffer-local `font-lock-global-modes'.
	`twittering-mode' can be used with/without any configuration for
	font-lock mode.
